--- a/project3/dlnd_tv_script_generation.ipynb
+++ b/project3/dlnd_tv_script_generation.ipynb
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -749,11 +749,11 @@
     "# Number of Epochs\n",
     "num_epochs = 50\n",
     "# Batch Size\n",
-    "batch_size = 100\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size = 150\n",
+    "rnn_size = 256\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = 100\n",
+    "embed_dim = 256\n",
     "# Sequence Length\n",
     "seq_length = 10\n",
     "# Learning Rate\n",
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -843,13 +843,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/69   train_loss = 8.821\n",
-      "Epoch   7 Batch   17/69   train_loss = 4.234\n",
-      "Epoch  14 Batch   34/69   train_loss = 3.239\n",
-      "Epoch  21 Batch   51/69   train_loss = 2.167\n",
-      "Epoch  28 Batch   68/69   train_loss = 1.847\n",
-      "Epoch  36 Batch   16/69   train_loss = 1.404\n",
-      "Epoch  43 Batch   33/69   train_loss = 1.224\n",
+      "Epoch   0 Batch    0/26   train_loss = 8.822\n",
+      "Epoch  19 Batch    6/26   train_loss = 2.343\n",
+      "Epoch  38 Batch   12/26   train_loss = 0.814\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -901,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -928,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -968,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1017,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1065,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1076,21 +1072,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak:(singing, points) yeah, the last guy off his ball-- and there's a car built?\n",
-      "moe_szyslak: come on, come on, come. no, i had a feeling i could love my new liver.\n",
-      "moe_szyslak: it's either milk... uh...\n",
-      "homer_simpson:(sighs) i don't get.\n",
-      "moe_szyslak: hey, moe. take it with this...(nervous chuckle)\n",
-      "moe_szyslak:(sadly) i have a confession to make: i want you to do.\n",
-      "moe_szyslak: oh, i'm not gonna let something ladies home for an joe. in this.\n",
-      "sec_agent_#1:(from tv) oh, it's me.\n",
-      "homer_simpson: there's it.\n",
-      "homer_simpson: hey, homer... uh...\n",
-      "moe_szyslak:(shocked) hey, it's there! i'm all lookin' up.\n",
-      "moe_szyslak: no, i'm not be. but when i need help till moe!\n",
-      "moe_szyslak: nah, i can't be fine.(laughs)\n",
-      "homer_simpson: moe, i just naturally assumed.\n",
-      "moe_szyslak: now,\n"
+      "moe_szyslak:(into phone) gotcha ya down for forty bucks!\n",
+      "moe_szyslak: what about the ball?!(very belch)\n",
+      "homer_simpson:(embarrassed) oh, moe.\n",
+      "moe_szyslak: eh, no, i'm not gonna let anything happen to my two, homer.\n",
+      "\n",
+      "\n",
+      "homer_simpson: well, i say the greatest.(still chuckle) what do you have a rough catholic first...\n",
+      "moe_szyslak: wow! he's not been four by carl? and i'll be so, and i have to stop paris...\n",
+      "apu_nahasapeemapetilon: no.\n",
+      "homer_simpson:(to moe, loud) actually homer...\n",
+      "\n",
+      "\n",
+      "moe_szyslak: hey, homer. if you're havin' a real crank prime(raises glass in front of mouth) atlanta falcons(lowers glass)!\n",
+      "moe_szyslak:(and dentist) oh, what are you thinking that time. i'm gonna do something for you and me and i'm too much clean off my wife! / at him, who knows this much than you.\n",
+      "homer_simpson:(handing maggie over) my tavern\n"
      ]
     }
    ],
